force-app/main/default/objects/Case_Setting__mdt/Case_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Case Setting</label>
    <pluralLabel>Case Settings</pluralLabel>
</CustomObject>