force-app/main/default/objects/Case_Setting__mdt/fields/OracleFetchFilter__c.field-meta.xml
<CustomField>
    <fullName>OracleFetchFilter__c</fullName>
    <defaultValue>&#39;Issue created from SF&#39;</defaultValue>
    <label>OracleFetchFilter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>