force-app/main/default/objects/Case_Setting__mdt/fields/OrgId__c.field-meta.xml
<CustomField>
    <fullName>OrgId__c</fullName>
    <defaultValue>&#39;300000003709718&#39;</defaultValue>
    <label>OrgId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>