force-app/main/default/objects/Case_Setting__mdt/fields/password__c.field-meta.xml
<CustomField>
    <fullName>password__c</fullName>
    <defaultValue>&#39;Hocards_854778&#39;</defaultValue>
    <label>password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>