force-app/main/default/objects/Case_Setting__mdt/fields/postEndpoint__c.field-meta.xml
<CustomField>
    <fullName>postEndpoint__c</fullName>
    <defaultValue>&#39;https://eerr.fa.us6.oraclecloud.com/fscmRestApi/resources/latest&#39;</defaultValue>
    <label>postEndpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>