force-app/main/default/objects/Case_Setting__mdt/fields/postResource__c.field-meta.xml
<CustomField>
    <fullName>postResource__c</fullName>
    <defaultValue>&#39;/qualityIssues&#39;</defaultValue>
    <label>postResource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>