force-app/main/default/objects/Case_Setting__mdt/fields/QualityTypeCode__c.field-meta.xml
<CustomField>
    <fullName>QualityTypeCode__c</fullName>
    <defaultValue>&#39;QI&#39;</defaultValue>
    <label>QualityTypeCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>