force-app/main/default/objects/Case_Setting__mdt/fields/QualityTypeId__c.field-meta.xml
<CustomField>
    <fullName>QualityTypeId__c</fullName>
    <defaultValue>&#39;300000003690511&#39;</defaultValue>
    <label>QualityTypeId</label>
    <length>250</length>
    <type>Text</type>
</CustomField>