force-app/main/default/objects/Case_Setting__mdt/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <defaultValue>&#39;ORA_LOW&#39;</defaultValue>
    <label>Severity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>