force-app/main/default/objects/Case_Setting__mdt/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <defaultValue>&#39;ORA_CUSTOMER&#39;</defaultValue>
    <label>Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>