force-app/main/default/objects/Case_Setting__mdt/fields/username__c.field-meta.xml
<CustomField>
    <fullName>username__c</fullName>
    <defaultValue>&#39;yyaqub@xavor.com&#39;</defaultValue>
    <label>username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>